# snippet

./: CLAUDE.md  README.md  README_CN.md
brpc_lalb/: BUILD.bazel  MODULE.bazel  TASK.md
brpc_lalb/docs/: algorithm.md  architecture.md
brpc_lalb/lalb/: BUILD.bazel  doubly_buffered_data.h  lalb.cc  lalb.h  weight.cc  weight.h  weight_tree.cc  weight_tree.h
brpc_lalb/tests/: BUILD.bazel  dbd_test.cc  lalb_test.cc  weight_test.cc  weight_tree_test.cc
ccuse/: README.md  README_CN.md  ccuse.sh
ccuse/examples/: settings_glm.json  settings_minimax.json  settings_zenmux.json
claude/skills/: README.md  README_CN.md
claude/skills/cpp-style-check/: README.md  README_CN.md  SKILL.md
claude/skills/cpp-style-check/scripts/: check_all.py  check_custom_rules.py
claude/skills/dev-init/: README.md  README_CN.md  SKILL.md
claude/skills/dev-init/scripts/: detect_env.sh  gen_profile.sh  gen_providers.sh  gen_zshrc.sh  init.sh  install_deps.sh  install_ohmyzsh.sh  setup_shell.sh
claude/skills/gcp/: README.md  README_CN.md  SKILL.md
claude/skills/learn-project/: README.md  README_CN.md  SKILL.md
claude/skills/learn-project/references/: template_course.md  template_mini.md  template_notes.md
claude/skills/learn-vec/: SKILL.md
claude/skills/learn-vec/references/: domain_knowledge.md  template_course.md  template_diagnose.md  template_mini.md  template_notes.md  template_pedagogy.md
concurrent_hashmap/: concurrent-hashmap-survey.md
zenmux/docs/: pricing.md
