cc_library(
    name = "lalb",
    srcs = [
        "weight.cc",
        "weight_tree.cc",
        "lalb.cc",
    ],
    hdrs = [
        "doubly_buffered_data.h",
        "weight.h",
        "weight_tree.h",
        "lalb.h",
    ],
    copts = ["-fno-exceptions"],
    visibility = ["//visibility:public"],
)
