cc_test(
    name = "weight_test",
    srcs = ["weight_test.cc"],
    copts = ["-fno-exceptions"],
    deps = [
        "//lalb",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "weight_tree_test",
    srcs = ["weight_tree_test.cc"],
    copts = ["-fno-exceptions"],
    deps = [
        "//lalb",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "lalb_test",
    srcs = ["lalb_test.cc"],
    copts = ["-fno-exceptions"],
    deps = [
        "//lalb",
        "@googletest//:gtest_main",
    ],
)
